wp-proxysql/wp-proxysql-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wp-proxysql
  namespace: thierry-space
  labels:
    app: wp-proxysql
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wp-proxysql
    spec:
      hostname: wp-proxy
      containers:
      - name: wp
        image: wordpress:latest
        resources:
          requests:
            cpu: "200m"
            memory: "128Mi"
          limits:
            cpu: "1000m"
            memory: "256Mi" 
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: pv-wp
          mountPath: /var/www/html
      - name: proxysql
        image: prima/proxysql
        resources:
          requests:
            cpu: "200m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi" 
        ports:
        - name: pxsql
          containerPort: 6033
        - name: pxsql-conf
          containerPort: 6032
      - name: init-proxy
        image: mysql:5.7
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "100m"
            memory: "150Mi"
        command:
        - bash
        - /config/init.sh 
        volumeMounts:
        - name: config
          mountPath: /config        
      volumes:
      - name: pv-wp
        persistentVolumeClaim:
          claimName: pvc-wp
      - name: config
        configMap:
          name: "wp-proxy"
