wp-proxysql/wordpress-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: monsitewp
  namespace: thierry-space
spec:
  selector:
    app: wp-proxysql
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
