wp-proxysql/wordpress-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: monsitewp
  namespace: thierry-space
  annotations:
    kubernetes.io/ingress.class: "tectonic"
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/use-port-in-redirects: "true"
spec:
  rules:
    - host: monsitewp2
      http:
        paths:
          - path: /
            backend:
              serviceName: monsitewp
              servicePort: 80
